<resources>
    <string name="app_name">PokeDex</string>
    <string name="tipos">Tipos:</string>
    <string name="nome">Nome:</string>
    <string name="habilidades">Habilidades:</string>
    <string name="stats">Stats:</string>
    <string name="movimentos">Movimentos:</string>
    <string name="todo">TODO</string>
    <string name="valor_do_nome">Valor do nome</string>
    <string name="valor_dos_tipos">Valor dos tipos</string>
    <string name="tipo">Tipo:</string>
    <string name="Nome">Nome</string>
    <string name="hp">HP:</string>
    <string name="attack">attack</string>
    <string name="Attack">Attack:</string>
    <string name="defense">Defense:</string>
    <string name="special_attack">Special attack:</string>
    <string name="speed">Speed:</string>
    <string name="special_defense">Special defense:</string>
</resources>